opam-version: "2.0"
maintainer:   "patrick@sirref.org"
authors:      ["Patrick Ferris"]
license:      "MIT"
homepage:     "https://github.com/patricoferris/irmin-caqti"
bug-reports:  "https://github.com/patricoferris/irmin-caqti/issues"
dev-repo:     "git+https://github.com/patricoferris/irmin-caqti.git"
build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"   {>= "4.08"}
  "dune"    {>= "3.0.0"}
  "caqti-lwt"
  "irmin"
  "caqti-driver-postgresql" {with-test}
  "irmin-test" {with-test}
]
synopsis: ""
description:"""
"""